# schistosomiasis

./: MANIFEST.in  README.md  pyproject.toml  schisto-main.py
color-profiles/: generic-pop-risk-style.txt  generic-risk-style.txt
notebooks/: ipyleaflet.ipynb
scripts/: prepare-data.py  readme.md
src/: schistosomiasis.py
src/natcap/invest/: schistosomiasis.py
src/natcap/notebooks/: ipyleaflet.ipynb
