[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
natcap = ["notebooks/*.ipynb"]

[project]
name = "schistosomiasis"
version = "0.1.0"
dependencies = [
    "pygeoprocessing",
    "taskgraph",
    "matplotlib",
    "natcap.invest @ git+https://github.com/natcap/invest.git@feature/plugins",
    "voila",
    "jupyter",
    "ipyleaflet",
    "ipywidgets",
    "geojson"
]

[tool.natcap.invest]
api_version = "0.1.0"
model_name = "Schistosomiasis" # user-facing name
pyname = "natcap.invest.schistosomiasis" # importable name
model_id = "schistosomiasis" # model identifier used internally
notebook_path = "natcap/notebooks/ipyleaflet.ipynb"
conda_dependencies = ["python<3.13.0", "gdal>=3.9.0", "setuptools<70"]
