[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
natcap = ["notebooks/*.ipynb"]

[project]
name = "schistosomiasis"
version = "0.1.0"
dependencies = [
    "pygeoprocessing",
    "taskgraph",
    "matplotlib",
    #"natcap.invest @ git+https://github.com/natcap/invest.git@feature/plugins",
    "natcap.invest @ git+https://github.com/natcap/schistosomiasis-invest.git@plugin/schisto",
    "voila",
    "jupyter",
    "ipyleaflet",
    "ipywidgets",
    "geojson",
    "gdal-utils"
]

[tool.natcap.invest]
api_version = "0.1.0"
model_title = "Schistosomiasis" # user-facing name
model_id = "schistosomiasis" # model identifier used internally
notebook_path = "natcap/notebooks/ipyleaflet.ipynb"
conda_dependencies = ["python<3.13.0", "gdal>=3.9.0", "setuptools<70", "sqlite<3.49.1", "libsqlite<3.49.1"]
